syntax = "proto3";
package user;
option go_package = "gateway/proto/user;user";

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
  int64 access_token_expires_in = 3;
  int64 refresh_token_expires_in = 4;
}